CHANGES for THREDDS Data Server (TDS)
Version @VERSION.MINOR@
Build Date = @BUILDTIME@

Changes in version 3.15
 Features
  * DatasetSource plug-in
  * opendap: remove ascii recursive call; use DConnect2/HttpClient.
  * make SSL/Basic the default authentication
  * Add cas, cams example pluggable authorization
  * add restrict dataset processing
  * CrawlableDataset
    - Add LogicalFilterComposer for AND-ing, OR-ing, and NOT-ing CrawlableDatasetFilters
    - Refactor MultiSelectorFilter so that Selector is an inner class.
 Bugs
  * opendap look for encoded chars in the CE (eg %20)
  * opendap should have the "-" bug fixed
  * opendap getLastModified() date was ignoring the CE (!)
  * tdr catalogs didnt have BaseURI set
  * NetcdfServlet: use Content-Disposition header (attachment; filename=filename) instead of always appending ".nc"
 Libraries
  * opendap now in seperate jar opendap.2.0, includes gnu-regexp, gnu-getopt
  * add casclient-2.1.1
  * upgrade commons libraries: fileupload-1.1.1, httpclient.3.0.1, io-1.2, logging-1.1
  * asssume jdk1.5, dont need xerces.jar or xml-api.jar anymore
  
Changes in version 3.14
 Bugs
  * InvDataset copy constructor wasnt making copies - dup metadata in InvDatasetFmrc
  * Upgrade ADN/DIF records to latest version
  * MetadataExtractor was assuming that theres alwasys a fileFormat element in the catalog
  * CrawlDataset needs to get ProxyDataset from catref
  * HtmlWriter was not handling remote catalogs with reletive catrefs
  * NetcdfServer failing on non-fmrc datasets, due to urlPath not relative.
  * Use of CrawlableDatasetDods in datasetScan failing. Update TDS to use
    CrawlableDataset interface to find parent dataset and compare paths
    instead of string manipulation on datasetScan@location string.
 Libraries
  * grib-5.0.04

Changes in version 3.13
 Features
  * add Aggregation.setTypicalDataset = random, latest, or penultimate
  * allow tdr dynamic catalogs
  * add content/public for publically available data