@@ -39,6 +39,7 @@ import ucar.nc2.dt.fmrc.FmrcImpl;
 import ucar.nc2.units.DateFormatter;
 import ucar.nc2.units.TimeUnit;
 import ucar.nc2.thredds.MetadataExtractor;
+import ucar.unidata.util.StringUtil;
 import thredds.datatype.DateRange;
 
 /**
@@ -178,6 +179,7 @@ public class InvDatasetFmrc extends InvCatalogRef {
 
         InvDatasetImpl ds = new InvDatasetImpl(this, "Forecast Model Run Collection (2D time coordinates)");
         String name = getName()+"_"+FMRC;
+        name = StringUtil.replace(name, ' ', "_");
         ds.setUrlPath(path+"/"+name);
         ds.setID(id+"/"+name);
         ThreddsMetadata tm = ds.getLocalMetadata();
@@ -188,6 +190,7 @@ public class InvDatasetFmrc extends InvCatalogRef {
 
         ds = new InvDatasetImpl(this, "Best Time Series");
         name = getName()+"_"+BEST;
+        name = StringUtil.replace(name, ' ', "_");
         ds.setUrlPath(path+"/"+name);
         ds.setID(id+"/"+name);
         tm = ds.getLocalMetadata();
@@ -468,6 +471,7 @@ public class InvDatasetFmrc extends InvCatalogRef {
       Date runDate = (Date) runs.get(i);
       //String name = StringUtil.escape(formatter.toDateTimeStringISO( runDate), "");
       String name = getName()+"_"+RUN_NAME+formatter.toDateTimeStringISO( runDate);
+      name = StringUtil.replace(name, ' ', "_");
       InvDatasetImpl nested = new InvDatasetImpl(this, name);
       nested.setUrlPath(path+"/"+RUNS+"/"+name);
       nested.setID(id+"/"+RUNS+"/"+name);
@@ -493,6 +497,7 @@ public class InvDatasetFmrc extends InvCatalogRef {
      for (int i = 0; i < offsets.size(); i++) {
        Double offset = (Double) offsets.get(i);
        String name = getName()+"_"+OFFSET_NAME+offset+"hr";
+       name = StringUtil.replace(name, ' ', "_");
        InvDatasetImpl nested = new InvDatasetImpl(this, name);
        nested.setUrlPath(path+"/"+OFFSET+"/"+name);
        nested.setID(id+"/"+OFFSET+"/"+name);
@@ -518,6 +523,7 @@ public class InvDatasetFmrc extends InvCatalogRef {
      for (int i = 0; i < forecasts.size(); i++) {
        Date forecastDate = (Date) forecasts.get(i);
        String name = getName()+"_"+FORECAST_NAME+formatter.toDateTimeStringISO( forecastDate);
+       name = StringUtil.replace(name, ' ', "_");
        InvDatasetImpl nested = new InvDatasetImpl(this, name);
        nested.setUrlPath(path+"/"+FORECAST+"/"+name);
        nested.setID(id+"/"+FORECAST+"/"+name);
